@@ -154,7 +154,7 @@ public class ParticipantParser {
         }
 
         @Override
-        public Participant getClone() {
+        public ConfirmableParticipant getClone() {
             return new JSONParticipant(this);
         }
 
@@ -204,6 +204,18 @@ public class ParticipantParser {
 
         public void setType(int type) {
             this.type = type;
+        }
+        
+        public JSONParticipant clone() throws CloneNotSupportedException {
+            JSONParticipant retval = (JSONParticipant) super.clone();
+            
+            retval.displayName = this.displayName;
+            retval.emailAddress = this.emailAddress;
+            retval.identifier = this.identifier;
+            retval.ignoreNotification = this.ignoreNotification;
+            retval.type = this.type;
+            
+            return retval;
         }
 
         @Override
