@@ -124,6 +124,23 @@ public class ParticipantsDiffer extends Differ<CalendarObject> {
         return isDifferent ? difference : null;
     }
 
+    private Change getChange(UserParticipant original, UserParticipant update) {
+        boolean changed = false;
+
+        ConfirmationChange change = new ConfirmationChange(Integer.toString(original.getIdentifier()));
+        if (original.getConfirm() != update.getConfirm()) {
+            changed = true;
+            change.setStatus(original.getConfirm(), update.getConfirm());
+        }
+
+        if (original.getConfirmMessage() != update.getConfirmMessage() && (original.getConfirmMessage() == null && update.getConfirmMessage() != null || !original.getConfirmMessage().equals(update.getConfirmMessage()))) {
+            changed = true;
+            change.setMessage(original.getConfirmMessage(), update.getConfirmMessage());
+        }
+
+        return changed ? change : null;
+    }
+
     @Override
     public int getColumn() {
         return CalendarObject.PARTICIPANTS;
