@@ -1,3 +1,7 @@
+* 2012-06-26 - martin.herfurth@open-xchange.com
+
+ - Fix for bug 22283: Update confirmation status of an existing Appointment from an iMip-Invitation.
+
 * 2012-06-25 - thorben.betten@open-xchange.com
 
  - Fix for bug 22380: Fixed loading of a recently saved message's images
